freiland/css: fix event subcat alignment in ie6

--- a/wordpress/wp-content/themes/freiland/style.css
+++ b/wordpress/wp-content/themes/freiland/style.css
@@ -1297,8 +1297,9 @@ ul.event-subcat li {
 #content ul.event-subcat {
 	float: left;
 	clear: both;
-	padding-left: 362px;
+	padding-left: 386px;
 	margin-bottom: 0;
+	margin-left: 0;
 }
 
 
